--- a/UsersServiceAndroid/app/src/main/res/layout/activity_register.xml
+++ b/UsersServiceAndroid/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6DE95"
-    tools:context=".LoginActivity">
+    tools:context=".RegisterActivity">
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
