--- a/UsersServiceAndroid/app/src/main/res/layout/fragment_main_menu.xml
+++ b/UsersServiceAndroid/app/src/main/res/layout/fragment_main_menu.xml
@@ -94,4 +94,16 @@
                 android:backgroundTint="@color/colorPrimary" />
         </LinearLayout>
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvHello"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="13dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
