--- a/UsersServiceAndroid/app/src/main/res/layout/fragment_splash_screen.xml
+++ b/UsersServiceAndroid/app/src/main/res/layout/fragment_splash_screen.xml
@@ -13,10 +13,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTintMode="add"
+        android:contentDescription="@string/app_name"
+        android:scaleType="fitXY"
+        android:scaleX="3"
+        android:scaleY="3"
         android:src="@drawable/ic_launcher_foreground"
-        android:tint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.43"
+        app:tint="@color/colorPrimaryDark" />
+
+    <TextView
+        android:id="@+id/tvAppName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/app_name"
+        android:textColor="@android:color/background_dark"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
