--- a/FireFighterAdventure/app/src/main/res/layout/fragment_register.xml
+++ b/FireFighterAdventure/app/src/main/res/layout/fragment_register.xml
@@ -50,9 +50,10 @@
         android:id="@+id/btnRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/register_string"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
