--- a/FireFighterAdventure/app/src/main/res/layout/fragment_login.xml
+++ b/FireFighterAdventure/app/src/main/res/layout/fragment_login.xml
@@ -11,9 +11,10 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/login_string"
         android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +22,7 @@
         app:layout_constraintVertical_bias="0.76" />
 
     <EditText
-        android:id="@+id/etPwd"
+        android:id="@+id/etPasswordLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/textbox"
@@ -38,7 +39,7 @@
         app:layout_constraintVertical_bias="0.51" />
 
     <EditText
-        android:id="@+id/etUsername"
+        android:id="@+id/etUsernameLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/textbox"
@@ -54,27 +55,27 @@
         app:layout_constraintVertical_bias="0.3" />
 
     <TextView
-        android:id="@+id/tvPwd"
+        android:id="@+id/tvPasswordLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/password_string"
         android:textColor="@android:color/background_dark"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/etPwd"
-        app:layout_constraintStart_toStartOf="@+id/etPwd" />
+        app:layout_constraintBottom_toTopOf="@+id/etPasswordLogin"
+        app:layout_constraintStart_toStartOf="@+id/etPasswordLogin" />
 
     <TextView
-        android:id="@+id/tvUsername"
+        android:id="@+id/tvUsernameLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/username_string"
         android:textColor="@android:color/background_dark"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/etUsername"
-        app:layout_constraintStart_toStartOf="@+id/etUsername" />
+        app:layout_constraintBottom_toTopOf="@+id/etUsernameLogin"
+        app:layout_constraintStart_toStartOf="@+id/etUsernameLogin" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_string"
