--- a/FireFighterAdventure/app/src/main/res/layout/fragment_login_register.xml
+++ b/FireFighterAdventure/app/src/main/res/layout/fragment_login_register.xml
@@ -11,7 +11,7 @@
         android:id="@+id/btnGotoRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/register_string"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:id="@+id/btnGotoLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/login_string"
         android:textSize="18sp"
         android:textStyle="bold"
