--- a/FireFighterAdventure/app/src/main/res/layout/fragment_change_password.xml
+++ b/FireFighterAdventure/app/src/main/res/layout/fragment_change_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F6DE95"
-    tools:context=".ChangePasswordFragment">
+    tools:context=".fragments.ChangePasswordFragment">
 
     <TextView
         android:id="@+id/tvConfirmNewPasswordChangePassword"
