--- a/FireFighterAdventure/app/src/main/res/layout/fragment_change_password.xml
+++ b/FireFighterAdventure/app/src/main/res/layout/fragment_change_password.xml
@@ -59,7 +59,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.32999998" />
+        app:layout_constraintVertical_bias="0.30" />
 
     <TextView
         android:id="@+id/tvNewPasswordChangePassword"
@@ -86,7 +86,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintVertical_bias="0.48000002" />
 
     <Button
         android:id="@+id/btnChangePassword"
@@ -102,7 +102,7 @@
         app:layout_constraintVertical_bias="0.86" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change_password_string"
