--- a/app/src/main/res/layout/fragment_delete_account.xml
+++ b/app/src/main/res/layout/fragment_delete_account.xml
@@ -7,6 +7,18 @@
     android:background="#F6DE95"
     tools:context=".fragments.DeleteAccountFragment">
 
+    <Button
+        android:id="@+id/btnBackDeleteAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/back_string"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.91" />
+
     <TextView
         android:id="@+id/tvPasswordDeleteAccount"
         android:layout_width="wrap_content"
@@ -32,7 +44,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.30" />
+        app:layout_constraintVertical_bias="0.28" />
 
     <TextView
         android:id="@+id/tvConfirmPasswordDeleteAccount"
@@ -59,7 +71,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.48000002" />
+        app:layout_constraintVertical_bias="0.45" />
 
     <Button
         android:id="@+id/btnDeleteAccount"
@@ -72,7 +84,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.86" />
+        app:layout_constraintVertical_bias="0.76" />
 
     <TextView
         android:id="@+id/tvDeleteAccount"
@@ -86,7 +98,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.120000005" />
+        app:layout_constraintVertical_bias="0.10" />
 
     <CheckBox
         android:id="@+id/cbDeleteAccount"
@@ -101,5 +113,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.67" />
+        app:layout_constraintVertical_bias="0.60" />
 </androidx.constraintlayout.widget.ConstraintLayout>
