--- a/app/src/main/res/layout/fragment_main_menu.xml
+++ b/app/src/main/res/layout/fragment_main_menu.xml
@@ -8,9 +8,14 @@
     tools:context=".fragments.MainMenuFragment">
 
     <LinearLayout
-        android:layout_width="300dp"
-        android:layout_height="600dp"
+        android:id="@+id/linearLayout2"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
         android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +29,9 @@
 
             <Button
                 android:id="@+id/btnGotoPlay"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10sp"
                 android:layout_weight="1"
                 android:background="@drawable/play"
                 android:backgroundTint="@color/colorPrimary"
@@ -33,8 +39,9 @@
 
             <Button
                 android:id="@+id/btnGotoProfile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10sp"
                 android:layout_weight="1"
                 android:background="@drawable/profile"
                 android:backgroundTint="@color/colorPrimary" />
@@ -48,11 +55,11 @@
 
             <Button
                 android:id="@+id/btnGotoInventory"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="10sp"
                 android:layout_weight="1"
-                android:width="200dp"
-                android:height="200dp"
                 android:background="@drawable/inventory"
                 android:backgroundTint="@color/colorPrimary" />
 
@@ -60,9 +67,9 @@
                 android:id="@+id/btnGotoShop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="10sp"
+                android:layout_marginTop="20sp"
                 android:layout_weight="1"
-                android:width="200dp"
-                android:height="200dp"
                 android:background="@drawable/shop"
                 android:backgroundTint="@color/colorPrimary" />
         </LinearLayout>
@@ -75,20 +82,21 @@
 
             <Button
                 android:id="@+id/btnGotoRanking"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.3"
-                android:width="200dp"
-                android:height="200dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20sp"
+                android:layout_marginEnd="10sp"
+                android:layout_weight="1"
+                android:background="@drawable/ranking"
                 android:backgroundTint="@color/colorPrimary" />
 
             <Button
                 android:id="@+id/btnLogout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10sp"
+                android:layout_marginTop="20sp"
                 android:layout_weight="1"
-                android:width="200dp"
-                android:height="200dp"
                 android:background="@drawable/logout"
                 android:backgroundTint="@color/colorPrimary" />
         </LinearLayout>
@@ -102,7 +110,8 @@
         android:textColor="@android:color/background_dark"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="13dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
