--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,80 +7,143 @@
     android:background="#F6DE95"
     tools:context=".fragments.ProfileFragment">
 
-    <Button
-        android:id="@+id/btnGotoDeleteAccount"
+    <TextView
+        android:id="@+id/tvProfileRankingPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/delete_account_string"
+        android:layout_marginTop="30dp"
+        android:text="@string/ranking_position_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/tvProfileScore"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileLevel" />
+
+    <Button
+        android:id="@+id/btnBackProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorAccent"
+        android:text="@string/back_string"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.78" />
+        app:layout_constraintVertical_bias="0.96" />
+
+    <Button
+        android:id="@+id/btnGotoDeleteAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:text="@string/delete_account_string"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.81" />
 
     <ImageView
         android:id="@+id/ivProfilePhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="92dp"
-        tools:src="@tools:sample/avatars" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/profile" />
 
     <TextView
         android:id="@+id/tvProfileUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="99dp" />
-
-    <TextView
-        android:id="@+id/tvProfileScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="143dp" />
-
-    <TextView
-        android:id="@+id/tvProfileBirthdate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="241dp"
-        tools:layout_editor_absoluteY="186dp" />
+        android:layout_marginTop="40dp"
+        android:text="@string/username_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/ivProfilePhoto"
+        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto" />
 
     <Button
         android:id="@+id/btnGotoChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/change_password_string"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="439dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.65999997" />
+
+    <TextView
+        android:id="@+id/tvProfileBirthdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/birthdate_string"
+        android:textColor="@android:color/background_dark"
+        app:layout_constraintStart_toStartOf="@id/tvProfileEmail"
+        app:layout_constraintTop_toBottomOf="@id/tvProfileEmail" />
+
+    <TextView
+        android:id="@+id/tvProfileScore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:text="@string/score_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePhoto"
+        app:layout_constraintStart_toEndOf="@+id/ivProfilePhoto"
+        app:layout_constraintTop_toTopOf="@+id/ivProfilePhoto"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnGotoChangeEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/change_email_string"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="349dp" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/btnGotoChangePassword"
+        app:layout_constraintTop_toTopOf="@+id/btnGotoChangePassword" />
+
+    <TextView
+        android:id="@+id/tvProfileLevel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="@string/level_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/tvProfileScore"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileScore" />
 
     <TextView
         android:id="@+id/tvProfileEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="229dp" />
+        android:layout_marginTop="20dp"
+        android:text="@string/email_string"
+        android:textColor="@android:color/background_dark"
+        app:layout_constraintStart_toStartOf="@id/tvProfileUsername"
+        app:layout_constraintTop_toBottomOf="@id/tvProfileUsername" />
 
     <TextView
-        android:id="@+id/tvProfileRankingPosition"
+        android:id="@+id/tvProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="238dp"
-        tools:layout_editor_absoluteY="273dp" />
+        android:text="@string/profile_string"
+        android:textColor="@android:color/background_dark"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/ivProfilePhoto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
