Arreglados campos de Email del fragment ChangeEmailFragment (estaban como tipo contraseña)

--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -37,7 +37,7 @@
         android:backgroundTint="@color/colorPrimary"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:backgroundTint="@color/colorPrimary"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPassword"
+        android:inputType="textEmailAddress"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
